# vae-playground

./: .gitignore  README.md  main.py  pyproject.toml  teste_marimo.py
configs/: default.py
notebooks/: 01_vanilla_vae.py  02_beta_vae.py  03_cvae.py  04_vq_vae.py  05_wae.py  06_compare_models.py
notebooks/__marimo__/session/: 01_vanilla_vae.py.json
notebooks/checkpoints/: beta_vae.pt  cvae.pt  vanilla_vae.pt  vq_vae.pt  wae_mmd.pt
src/vae_playground/: __init__.py
src/vae_playground/data/: __init__.py  datasets.py
src/vae_playground/models/: __init__.py  base.py  beta_vae.py  cvae.py  vanilla_vae.py  vq_vae.py  wae.py
src/vae_playground/training/: __init__.py  callbacks.py  losses.py  trainer.py
src/vae_playground/utils/: __init__.py  metrics.py  visualization.py
