[project]
name = "vae-playground"
version = "0.1.0"
description = "Modular VAE experiments with interactive marimo notebooks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.5",
    "torchvision>=0.20",
    "marimo[recommended]>=0.19.9",
    "matplotlib>=3.9",
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "plotly>=5.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vae_playground"]
